--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,8 @@
 }
 
 /* Change color of dropdown links on hover */
-
+.dropdown:hover .dropdown-content{background-xolor:grey;
+}
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
