--- a/css/style.css
+++ b/css/style.css
@@ -154,13 +154,13 @@
 {
 	.body{
 		width: 600px;
-		height: 100%;
+		height: 1800px;
 	}
 
 	
 	.jumbotron{
 		width: 650px;
-		height: 100%;
+		height: 1800px;
 		padding: 0;
 		background: #333 -800px -400px;
 		color: #fff;
@@ -171,7 +171,7 @@
 	
 	.navbar{
 		width: 650px;
-		height: 100%;
+	
 		margin:0;
 		color: #fff;
 	}
@@ -221,7 +221,7 @@
 	}
 	.navbar{
 		width: 650px;
-		height: 100%
+
 		margin:0;
 		color: #fff;
 	}
