--- a/css/style.css
+++ b/css/style.css
@@ -153,13 +153,13 @@
 @media(min-width: 1000px)
 {
 	.body{
-		width: 1000px;
+		width: 100%x;
 		height: 1100px;
 	}
 
 	
 	.jumbotron{
-		width: 1000px;
+		width: 100%;
 		height: 1100px;
 		padding: 0;
 		background: #333 -800px -400px;
@@ -170,7 +170,7 @@
 
 	
 	.navbar{
-		width: 1000px;
+		width: 100%;
 		height:100px;
 		margin:0;
 		color: #fff;
@@ -219,7 +219,7 @@
 
 	}
 	.navbar{
-		width: 100px;
+		width: 100%;
 		height:100px;
 		margin:0;
 		color: #fff;
@@ -253,11 +253,11 @@
 	}
 	
 	.img{
-		width:1000px;
+		width:100%;
 		height:1100px; 
 	}
 	.img1{
-		width:1000px;
+		width:100%;
 		height: 1100px; 
 	}
 	
