--- a/css/style.css
+++ b/css/style.css
@@ -150,163 +150,74 @@
 
 /*Media Queries*/
 
-@media(min-width: 1080px)
-{
-	.body{
-		width: 1080px;
-		height: 1920px;
-	}
+@media only screen and (max-width: 400px) {
+  body {
+    background-color: lightblue;
+   	width: 400px;
+	height: 600px;
 
+  }
+
+.container{
+	margin: 0;
+	position: relative;
+	text-align: center;
+}
+.centered{
+	color: #E2DFE5;
+	position: absolute;
+	top: 50%;
+	left: 60%;
+	transform: translate(-50%,-50%);
+}
+.centered1{
+	color: #E2DFE5;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.btn-primary{
+	background:#313461;
+	border-color:#313461;
+}
+.btn-default{
+	background:white;
+	border-color:#313461;
+}
+
+.jumbotron{
+	width: 400px;
+	height: 600px;
+	padding: 0;
+	background: #333 -400px -200px;
+	color: #fff;
+	text-align: center;
 	
-	.jumbotron{
-		width: 1080px;
-		height: 1920px;
-		padding: 0;
-		background: #333 -800px -400px;
-		color: #fff;
-		text-align: center;
-	
-	}
+}
+.jumbotron-main{
+	padding:0;
+}
+.jumbotron-main h1{
+	margin-top: 220px;
+	margin-bottom: 60px;
+}
+.jumbotron p.lead{
+	font-size: 25px;
+	margin-bottom:60px; 
+}
+.jumbotron-sub{
+	padding: 10 60px 40px 60px;
 
-	.container{
-		margin: 0;
-		position: relative;
-		text-align: center;
-	}
-	.centered{
-		color: ##E2DFE5;
-		position: absolute;
-		top: 50%;
-		left: 60%;
-		transform: translate(-50%,-50%);
-	}
-	.centered1{
-		color: ##E2DFE5;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%,-50%);
-	}
-	.btn-primary{
-		background:#313461;
-		border-color:#313461;
-	}
-	.btn-default{
-		background:white;
-		border-color:#313461;
-	}
-	.jumbotron-main{
-		padding:0;
-	}
-	.jumbotron-main h1{
-		margin-top: 60px;
-		margin-bottom: 30px;
-	}
-	.jumbotron p.lead{
-		font-size: 25px;
-		margin-bottom:60px; 
-	}
-	.jumbotron-sub{
-		padding: 10 60px 40px 60px;
+}
 
-	}
-	.navbar{
-		width: 1080px;
-		height:100px;
-		margin:0;
-		color: #fff;
-	}
-	.navbar a{
-		color: black;
-		margin-bottom: 3px;
-
-	}
-	.navbar a:hover{
-		background:none !important;
-		border-bottom: #fff 2px solid;
-		margin-bottom: 0;
-	}
-	.box{
-		text-align: center;
-
-	}
-	.box .glyphicon{
-		font-size: 50px;
-	}
-	.section-a{
-		background:#313461;
-		color:#fff;
-		text-align: center;
-		padding: 50px;
-		margin-bottom: 30px;
-	}
-	.section-a h1{
-		font-size: 40px;
-	}
-	
-	.img{
-		width:1080px;
-		height:1920px; 
-	}
-	.img1{
-		width:1080px;
-		height: 1920px; 
-	}
-	
-	.main-footer{
-		background: #f5f5f5;
-		padding: 50px;
-	}
-
-	/* Style The Dropdown Button */
-	.dropbtn {
-	  background-color: #313461;
-	  color: white;
-	  padding: 16px;
-	  font-size: 16px;
-	  border: none;
-	  cursor: pointer;
-	}
-
-	/* The container <div> - needed to position the dropdown content */
-	.dropdown {
-	  position: relative;
-	  display: inline-block;
-	  padding-left: 0;
-	}
-
-	/* Dropdown Content (Hidden by Default) */
-	.dropdown-content {
-	  display: none;
-	 
-	  background-color: grey;
-	  min-width: 160px;
-	  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	  z-index: 1;
-	}
-
-	/* Links inside the dropdown */
-	.dropdown-content a {
-	  padding-bottom: 200px;
-	  color: black;
-	  padding: 12px 16px;
-	  text-decoration: none;
-	  display: block;
-	}
-
-	/* Change color of dropdown links on hover */
-	.dropdown-content a:hover {background-color: grey}
-
-	/* Show the dropdown menu on hover */
-	.dropdown:hover .dropdown-content {
-	  display: block;
-	}
-
-	/* Change the background color of the dropdown button when the dropdown content is shown */
-	.dropdown:hover .dropbtn {
-	  background-color: darkblue;
-	}
-
-
+.img{
+	width:400px;
+	height:600px; 
+}
+.img1{
+	width:400px;
+	height: 600px; 
+}
 
 }
